apps/motioneye/motioneye-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: motioneye-service
  namespace: motioneye
  labels:
    app: motioneye
spec:
  selector:
    app: motioneye
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8765
