apps/motioneye/motioneye-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: motioneye-route
  namespace: motioneye
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`motioneye.germanium.home`)
    services:
    - name: motioneye-service
      namespace: motioneye
      port: 80
